--- a/css/app.css
+++ b/css/app.css
@@ -144,3 +144,56 @@ img {
         display: flex;
     }
 }
+/*Sobre TecPro*/
+.sobre-tech-pro{
+    background-image: linear-gradient(to bottom, transparent 50%, #037bc0 50%, #037bc0 100%), url(../img/imagen-mujer.jpg);
+    background-position: right;
+    background-repeat: repeat, no-repeat;
+    background-size: 100%, 90rem;
+}
+.sobre-tech-grid{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);   
+}
+.texto-sobre-tech-pro{
+    color:white;
+    grid-row: 2/3;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-bottom: var(--separacion);
+  
+}
+@media (min-width: 768px) {
+    .sobre-tech-pro{
+        background-repeat: repeat, no-repeat;
+        background-image: linear-gradient( to left, transparent 50%, var(--primario) 0% ), url(../img/imagen-mujer.webp);
+    }
+
+    .sobre-tech-grid {
+        grid-template-rows: unset;
+        row-gap: unset;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 4rem;
+        padding: calc( var(--separacion ) * 2) 0;
+    }
+}
+@media (min-width: 1440px){
+    .sobre-tech-pro{
+        background-size: 100%, 210rem;
+    }
+    sobre-tech-grid{
+        display: grid;
+        grid-template-rows: repeat(2, 40rem);
+        row-gap: var(--separacion);  
+    }
+
+    .texto-sobre-tech-pro h2 {
+        font-size: 4rem;
+    }
+    .texto-sobre-tech-pro p {
+        font-size: 2rem;
+        line-height: 2;
+    }
+}
+
