--- a/css/app.css
+++ b/css/app.css
@@ -197,3 +197,170 @@ img {
     }
 }
 
+/* Main Tech Pro*/
+.item-tech-pro img {
+    height: 18rem;
+    padding: 1rem;
+}
+
+.item-tech-pro{
+    background-color: var(--grisClaro);
+    color:var(--primario);
+    border-radius: 25px;
+}
+
+.item-tech-pro:last-child{
+    background-color: var(--primario);
+    color:var(--blanco);
+}
+
+.grid-main-tech-pro{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    text-align: center;
+    gap: var(--separacion);
+    background-repeat: no-repeat;
+    background-position: 90% center;
+    transition-property: transform background-size;
+    transition-duration: .3s
+}
+
+.item-tech-pro:hover, .imagen-tech-pro:hover {
+    transform: scale(1.1);
+    background-size: 30rem;
+}
+
+.grid-main-tech-pro h3{
+    font-size: 2.8rem;
+    text-align: center;
+}
+
+.texto-tech-pro span{
+    font-size: 2.8rem;
+}
+
+.item-tech-pro{
+    display: flex;
+    gap:2rem
+}
+
+@media (min-width: 768px) {
+    .grid-main-tech-pro{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(2, 20rem);
+        gap: 4rem;
+        padding: 1rem;
+       
+    }
+
+    .grid-main-tech-pro h3{
+        font-size: 2.3rem;
+        text-align: center;
+    }
+
+    .tech-pro-z{
+        grid-column: 2/3;
+        grid-row:1/3
+    }
+
+    .item-tech-pro:last-child img {
+        height:35rem;
+    
+    }
+
+    .tech-pro-z h3{
+        font-size: 2.5rem;
+    }
+
+    .item-tech-pro{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+}
+
+@media (min-width: 1440px){
+    .grid-main-tech-pro h3{
+        font-size: 3rem;
+    }
+
+    .texto-tech-pro span{
+        font-size: 3rem;
+        font-weight: bold;
+    }
+}
+
+
+/* New Letter*/
+.grid-new-letter{
+    margin-top: var(--separacion);
+    background-size: 100%, 70rem;
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-image: linear-gradient( to bottom, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg) ;
+  
+}
+.grid-new-letter{
+    display: grid;
+    grid-template-rows: repeat(2,30rem);
+}
+.texto-letter{
+    grid-row: 2 / 3;
+}
+
+@media (min-width: 768px) {
+    .grid-new-letter{
+        display: grid;
+        grid-template-rows: unset;
+        grid-template-columns: repeat(2, 1fr);
+        background-image: linear-gradient( to right, transparent 50%, var(--blanco) 0% ), url(../img/newsletter.jpg) ;
+        gap: var(--separacion);
+    }
+    .texto-letter{
+        grid-column: 2 / 3;
+    }
+}
+
+@media (min-width: 1440px){
+    .grid-new-letter{
+        background-size: 100%, 130rem;
+        background-position: center, 0% -30rem;
+    }
+
+    
+} 
+
+.formulario-actualizacion{
+    display: flex;
+    flex-direction: column;
+
+    
+}
+
+.formulario-actualizacion input[type="text"] {
+    width: 100%;
+    padding: 1rem;
+}
+
+.formulario-actualizacion input[type="submit"] {
+    width: 100%;
+    padding: 2rem;
+    background-color: var(--primario);
+    color: var(--blanco);
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-weight: 900;
+    border: none;
+}
+
+
+.footer{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2rem;
+    color: var(--primario);
+    padding: 2rem 0;
+}
